add basic heartbeat unit test
Signed-off-by: Valeri Nistor <nistor.valeri@gmail.com>

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -40,8 +40,8 @@ option (UNIT_TEST_DDL_CL "Unit testing: ddl proxy client module")
 option (UNIT_TEST_REPLICATION_CHANNELS "Unit testing: replication channels module")
 option (UNIT_TEST_RESOURCE_TRACKER "Unit testing: resource tracker")
 option (UNIT_TEST_MONITOR "Unit testing: monitor")
-option (UNIT_TEST_MONITOR "Unit testing: replication")
-
+option (UNIT_TEST_REPLICATION "Unit testing: replication")
+option (UNIT_TEST_HEARTBEAT "Unit testing: heartbeat")
 
 message("  unit_tests/...")
 
@@ -119,3 +119,8 @@ if (UNIT_TESTS OR UNIT_TEST_REPLICATION)
   message("    replication")
   add_subdirectory(replication)
 endif(UNIT_TESTS OR UNIT_TEST_REPLICATION)
+
+if (UNIT_TESTS OR UNIT_TEST_HEARTBEAT)
+  message("    master")
+  #add_subdirectory(master)
+endif(UNIT_TESTS OR UNIT_TEST_HEARTBEAT)
